overflow issue

--- a/src/pages/ReportPage/ReportPage.module.scss
+++ b/src/pages/ReportPage/ReportPage.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   gap: $size-50 * 3;
+  overflow-x: hidden;
 
   @media screen and (max-width: 768px) {
     gap: $size-50;
