--- a/src/pages/ReportPage/components/Card/SectionWrapper/SectionWrapper.module.scss
+++ b/src/pages/ReportPage/components/Card/SectionWrapper/SectionWrapper.module.scss
@@ -5,6 +5,7 @@
   position: relative;
 
   margin-inline: $size-24;
+  margin-block-end: $size-65;
 
   div h2 {
     margin-block-start: 0;
